chore(ui): impl say hello world

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -45,6 +45,7 @@
     "contacts": "Contacts",
     "copy": "Copy",
     "create": "Create",
+    "create_now": "Create Now",
     "create_a_persona": "Create a Persona",
     "create_a_wallet": "Create a Wallet",
     "create_persona": "Create Persona",
@@ -159,6 +160,9 @@
     "immersive_setup_add_bio_text": "Add the following text in your bio to access advanced features. Please don't delete or change it.",
     "immersive_setup_paste_into_bio_auto": "Please add it for me",
     "immersive_setup_paste_into_bio_failed": "Failed… Please add it to your bio manually",
+    "immersive_setup_say_hello_title": "Say \"Hello World\"",
+    "immersive_setup_say_hello_primary": "Create your first post via Maskbook so that others can encrypt their posts for you.",
+    "immersive_setup_say_hello_secondary": "You need to publish posts via Maskbook frequently to allow others to encrypt their posts for you.",
     "import": "Import",
     "import_failed": "Import Failed",
     "import_persona": "Import your persona",
