--- a/src/_locales/zh/messages.json
+++ b/src/_locales/zh/messages.json
@@ -45,6 +45,7 @@
     "contacts": "聯絡人",
     "copy": "複製",
     "create": "創建",
+    "create_now": "現在創建",
     "create_a_persona": "創建角色",
     "create_a_wallet": "創建錢包",
     "create_persona": "創建角色",
@@ -160,6 +161,9 @@
     "immersive_setup_add_bio_text": "在您的個人簡介中添加以下文本以訪問高級功能。 請不要刪除或更改它。",
     "immersive_setup_paste_into_bio_auto": "幫我加上它",
     "immersive_setup_paste_into_bio_failed": "失敗了……請手動將其添加到您的個人簡介中",
+    "immersive_setup_say_hello_title": "Say \"Hello World\"",
+    "immersive_setup_say_hello_primary": "Create your first post via Maskbook so that others can encrypt their posts for you.",
+    "immersive_setup_say_hello_secondary": "You need to publish posts via Maskbook frequently to allow others to encrypt their posts for you.",
     "import": "導入",
     "import_failed": "導入失敗",
     "import_persona": "導入角色",
